<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSService</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="butn1">Start Service</string>
    <string name="butn2">Stop Service</string>
    <string name="status"></string>
    <string name="Latitude">"Latitude : "</string>
    <string name="lat">0.0</string>
    <string name="Longitude">"Longitude : "</string>
    <string name="lon">0.0</string>
    <string name="Accuracy">"Accuracy : "</string>
    <string name="acc">0.0</string>
    <string name="refe">Refresh</string>

</resources>
